--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <button class="menu-button" id="js-menu-button" type="button"></button>
                 <div class="lang wow fadeInDown delay-5s faster"><span class="lang__curr lang-curr-js">RU</span>
-                    <div class="lang__all lang-all-js"><a href="#" class="lang__item">EN</a><a href="#"
+                    <div class="lang__all lang-all-js"><a href="https://falkinroman.github.io/portfolio-EN/" class="lang__item">EN</a><a href="#"
                             class="lang__item">RU</a></div>
                 </div>
             </ul>
